// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mask blur method 1`] = `
<DocumentFragment>
  <div
    class="za-mask za-mask--blur"
  />
</DocumentFragment>
`;

exports[`Mask renders correctly 1`] = `
<DocumentFragment>
  <div
    class="za-mask"
  />
</DocumentFragment>
`;
